[package]
name = "mongorm"
description = ""
authors = ["Syed Vilayat Ali Rizvi <vilayatcodemysite@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
mongodb = "2.7.1"
