[package]
name = "mongorm"
description = "MongORM-RS is a fast, simple, and powerful Object-Relation Mapper (ORM) for MongoDB in Rust"
authors = ["Syed Vilayat Ali Rizvi <vilayatcodemysite@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
async-trait = "0.1.74"
thiserror = "1.0.50"
mongodb = { version = "2.7.1", features = ["snappy-compression"] }
syn = "2.0.48"
quote = "1.0.35"
serde_json = "1.0.111"
chrono = "0.4.31"
rayon = "1.8.0"
bson = "2.8.1"
